src/network_policies/test2monitoring-fluidos-consumer-1eb36fcd3aa4ef979c5baae84c5675db98f4848b1035191a2595feba5f616d3bd7e3ca Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test2monitoring-fluidos-consumer-1eb36fcd3aa4ef979c5baae84c5675db98f4848b1035191a2595feba5f616d3bd7e3ca
  namespace: monitoring-fluidos-consumer-1eb36f
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: resource-monitor
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        cidr: 142.250.0.0/15
